# rag-knowledge-system

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SECURITY.md  docker-compose.yml  justfile  main.py  pyproject.toml  repos.txt  repos.txt.example  requirements-dev.txt  run.py  run_github_batch.py  run_hierarchical.py  test_repos.txt
.github/workflows/: security.yml
src/: chat_interface.py  config.py  document_loader.py  github_loader.py  hierarchical_loader.py  hierarchical_splitter.py  indexing_pipeline.py  main.py  query_pipeline.py
tests/: test_chat_interface.py  test_config.py  test_document_loader.py  test_github_loader.py  test_hierarchical_loader.py  test_hierarchical_splitter.py  test_indexing_pipeline.py  test_integration.py  test_main.py  test_query_pipeline.py
