[project]
name = "rag-knowledge-system"
version = "0.1.0"
description = "Local RAG system with Google Drive integration using Haystack framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "haystack-ai>=2.0.0",
    "qdrant-haystack",
    "ollama-haystack",
    "llama-index-readers-google",
    "python-dotenv",
    "rich",
    "pytest>=7.0.0",
    "pytest-asyncio",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-api-python-client>=2.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-watch>=4.2.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
